test/binCases/config-type/invalid-type/test.opts
--config ./webpack.config.js
--target async-node
--mode production